# task-tg-bot

./: README.md  pyproject.toml  requirements.txt
src/: .env.example  main.py
src/task_tg_bot/: __init__.py
src/task_tg_bot/data/: tasks.json5
test/: test.json
